--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
+  <button class="ii">test</button>
   <h2>Data</h2>
-  <button id="collapse-btn">Collapse</button>
+  <!-- <button id="collapse-btn">Collapse</button>
   <button id="expand-btn">Expand</button>
   <button id="toggle-btn">Toggle</button>
   <button id="toggle-level1-btn">Toggle level1</button>
-  <button id="toggle-level2-btn">Toggle level2</button>
-  <div id="json"></div>
+  <button id="toggle-level2-btn">Toggle level2</button> -->
+  <!-- <div id="json"></div> -->
 
 
 
@@ -43,7 +44,16 @@
       .then(result => {
         // 處理回傳的結果
         console.log(result);
-        jsonViewer(result)
+        if (result.length != 0) {
+          for (let index = 0; index < result.length; index++) {
+
+            createDiv(index)
+
+            jsonViewer(result[index], index)
+
+          }
+        }
+
       })
       .catch(error => {
         // 處理錯誤
@@ -51,29 +61,46 @@
       });
 
 
-    function jsonViewer(json) {
-      $("#json").JSONView(json);
+    function createDiv(index) {
+      $('body').append(`<button id="collapse-btn${index}">Collapse</button>`);
+      $('body').append(`<button id="expand-btn${index}">Expand</button>`);
+      $('body').append(`<button id="toggle-btn${index}">Toggle</button>`);
+      $('body').append(`<button id="toggle-level1-btn${index}">Toggle level1</button>`);
+      $('body').append(`<button id="toggle-level2-btn${index}">Toggle level2</button>`);
+      $('body').append(`<div id="json${index}"></div>`);
+    }
 
-      $("#json-collapsed").JSONView(json, { collapsed: true, nl2br: true, recursive_collapser: true });
 
-      $('#collapse-btn').on('click', function () {
-        $('#json').JSONView('collapse');
+    function jsonViewer(json, index) {
+
+      let a = `#json${index}`
+      let b = `#collapse-btn${index}`
+      let c = `#expand-btn${index}`
+      let d = `#toggle-btn${index}`
+      let e = `#toggle-level1-btn${index}`
+      let f = `#toggle-level2-btn${index}`
+
+
+      $(a).JSONView(json, { collapsed: true });
+
+      $(b).on('click', function () {
+        $(a).JSONView('collapse');
       });
 
-      $('#expand-btn').on('click', function () {
-        $('#json').JSONView('expand');
+      $(c).on('click', function () {
+        $(a).JSONView('expand');
       });
 
-      $('#toggle-btn').on('click', function () {
-        $('#json').JSONView('toggle');
+      $(d).on('click', function () {
+        $(a).JSONView('toggle');
       });
 
-      $('#toggle-level1-btn').on('click', function () {
-        $('#json').JSONView('toggle', 1);
+      $(e).on('click', function () {
+        $(a).JSONView('toggle', 1);
       });
 
-      $('#toggle-level2-btn').on('click', function () {
-        $('#json').JSONView('toggle', 2);
+      $(f).on('click', function () {
+        $(a).JSONView('toggle', 2);
       });
     }
   </script>
